# Template_Auth

./: README.md  future_implementations.md
backend/: .gitignore  audit.py  database.py  main.py  pyproject.toml  students.db
backend/auth/: dependencies.py  models.py  routes.py  utils.py
backend/tests/: test_audit_logs.py  test_auth_flow.py
frontend/: package.json
frontend/src/: App.tsx  index.css
frontend/src/pages/: ChangePassword.tsx  Login.tsx  Signup.tsx
